<resources>
    <string name="FreeformWindowOrientation_landscape" />
    <string name="FreeformWindowOrientation_portrait" />
    <string name="FreeformWindowSize_maximize" />
    <string name="FreeformWindowSize_phone" />
    <string name="FreeformWindowSize_tablet" />
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="about_contact_us">Hubungi saya</string>
    <string name="about_facebook">Sukai saya di Facebook</string>
    <string name="about_instagram">Ikuti instagram</string>
    <string name="about_play_store">Beri penilaian di Playstore</string>
    <string name="about_twitter">Ikuti saya di Twitter</string>
    <string name="about_youtube">Tonton saya di Youtube</string>
    <string name="achievement">Pencapaian</string>
    <string name="achievement_arrogant_toast_text">Sombong (meminta skor maksimal)!</string>
    <string name="achievement_humble_toast_text">Rendah hati! (meminta 0 skor)</string>
    <string name="achievement_leet_toast_text">L33t! (mendapat skor 1337)</string>
    <string name="achievement_prime_toast_text">Skor utama!</string>
    <string name="achievements_exception">Ada masalah saat berkomunikasi dengan pencapaian.</string>
    <string name="action_settings">Settings</string>
    <string name="ad_attribution">Ad</string>
    <string name="ad_open_app_id">ca-app-pub-4317818705835152/6753996982</string>
    <string name="admob_id">ca-app-pub-4317818705835152~2579245236</string>
    <string name="androidx_startup">androidx.startup</string>
    <string name="app_description">© Bezets . 2019 - 2026</string>
    <string name="app_id">72734386116</string>
    <string name="app_intro_back_button">BACK</string>
    <string name="app_intro_done_button">DONE</string>
    <string name="app_intro_image_content_description">graphics</string>
    <string name="app_intro_next_button">NEXT</string>
    <string name="app_intro_skip_button">SKIP</string>
    <string name="app_name">Guitar Band Hero</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="back">Kembali</string>
    <string name="banner_ad_unit_id">ca-app-pub-4317818705835152/7532189011</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="bottomsheet_action_collapse">Collapse the bottom sheet</string>
    <string name="bottomsheet_action_expand">Expand the bottom sheet</string>
    <string name="bottomsheet_action_expand_halfway">Expand halfway</string>
    <string name="bottomsheet_drag_handle_clicked">Drag handle double-tapped</string>
    <string name="bottomsheet_drag_handle_content_description">Drag handle</string>
    <string name="call_notification_answer_action">Answer</string>
    <string name="call_notification_answer_video_action">Video</string>
    <string name="call_notification_decline_action">Decline</string>
    <string name="call_notification_hang_up_action">Hang Up</string>
    <string name="call_notification_incoming_text">Incoming call</string>
    <string name="call_notification_ongoing_text">Ongoing call</string>
    <string name="call_notification_screening_text">Screening an incoming call</string>
    <string name="character_counter_content_description">Characters entered %1$d of %2$d</string>
    <string name="character_counter_overflowed_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d/%2$d</string>
    <string name="choose_difficulty">Pilih tingkat kesulitan untuk dimainkan:</string>
    <string name="clear">Clear</string>
    <string name="clear_text_end_icon_content_description">Clear text</string>
    <string name="common_google_play_services_enable_button">Enable</string>
    <string name="common_google_play_services_enable_text">"%1$s won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Install</string>
    <string name="common_google_play_services_install_text">"%1$s won't run without Google Play services, which are missing from your device."</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_notification_channel_name">Google Play services availability</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="common_google_play_services_unsupported_text">"%1$s won't run without Google Play services, which are not supported by your device."</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">"%1$s won't run unless you update Google Play services."</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">"%1$s won't run without Google Play services, which are currently updating."</string>
    <string name="common_google_play_services_wear_update_text">New version of Google Play services needed. It will update itself shortly.</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="copy">Copy</string>
    <string name="copy_toast_msg">Link copied to clipboard</string>
    <string name="crop_image_activity_title">Pilih Gambar</string>
    <string name="crop_image_menu_crop">Potong</string>
    <string name="crop_image_menu_rotate_left">Putar berlawanan arah jarum jam</string>
    <string name="crop_image_menu_rotate_right">Putar</string>
    <string name="customactivityoncrash_error_activity_close_app">TUTUP APLIKASI</string>
    <string name="customactivityoncrash_error_activity_error_details">DETAIL KESALAHAN</string>
    <string name="customactivityoncrash_error_activity_error_details_clipboard_label">Informasi Kesalahan</string>
    <string name="customactivityoncrash_error_activity_error_details_close">Tutup</string>
    <string name="customactivityoncrash_error_activity_error_details_copied">Tersalin ke clipboard</string>
    <string name="customactivityoncrash_error_activity_error_details_copy">Salin ke clipboard</string>
    <string name="customactivityoncrash_error_activity_error_details_reported">Terima kasih! Kesalahan telah dilaporkan!</string>
    <string name="customactivityoncrash_error_activity_error_details_title">Detail Kesalahan</string>
    <string name="customactivityoncrash_error_activity_error_occurred_explanation">Terjadi kesalahan yang tidak terduga. Kami akan memperbaikinya secepat mungkin!</string>
    <string name="customactivityoncrash_error_activity_error_report">LAPORKAN KESALAHAN</string>
    <string name="customactivityoncrash_error_activity_error_title">Terjadi kesalahan.</string>
    <string name="customactivityoncrash_error_activity_restart_app">MULAI ULANG</string>
    <string name="customactivityoncrash_error_activity_unknown_exception">Kesalahan tidak terduga</string>
    <string name="default_web_client_id">72734386116-4mlm82gf65d0e5g128ct133nttd3ffb8.apps.googleusercontent.com</string>
    <string name="dest_title">destination title</string>
    <string name="digit0">0</string>
    <string name="digit1">1</string>
    <string name="digit2">2</string>
    <string name="digit3">3</string>
    <string name="digit4">4</string>
    <string name="digit5">5</string>
    <string name="digit6">6</string>
    <string name="digit7">7</string>
    <string name="digit8">8</string>
    <string name="digit9">9</string>
    <string name="easy">Mudah</string>
    <string name="easy_mode_explanation">Anda bermain dalam mode mudah, sehingga Anda mendapatkan skor yang Anda minta! Bukankah itu mudah?</string>
    <string name="error_a11y_label">Error: invalid</string>
    <string name="error_icon_content_description">Error</string>
    <string name="expand_button_title">Advanced</string>
    <string name="expert">Expert</string>
    <string name="exposed_dropdown_menu_content_description">Show dropdown menu</string>
    <string name="fab_transformation_scrim_behavior">com.google.android.material.transformation.FabTransformationScrimBehavior</string>
    <string name="fab_transformation_sheet_behavior">com.google.android.material.transformation.FabTransformationSheetBehavior</string>
    <string name="facebook_id">ihsan.badruzaman</string>
    <string name="fallback_menu_item_copy_link">Copy link</string>
    <string name="fallback_menu_item_open_in_browser">Open in browser</string>
    <string name="fallback_menu_item_share_link">Share link</string>
    <string name="firebase_database_url">https://guitarbandindonesia.firebaseio.com</string>
    <string name="friends_title">Teman</string>
    <string name="game_services_project_id">72734386116</string>
    <string name="game_view_content_description">Game View</string>
    <string name="gcm_defaultSenderId">72734386116</string>
    <string name="google_api_key">AIzaSyDLYQlYPrl1uJ91_pCqKuXBHvGDfWo-1to</string>
    <string name="google_app_id">1:72734386116:android:66cf0b3cf22c5b0dcfe691</string>
    <string name="google_crash_reporting_api_key">AIzaSyDLYQlYPrl1uJ91_pCqKuXBHvGDfWo-1to</string>
    <string name="google_storage_bucket">guitarbandindonesia.appspot.com</string>
    <string name="hard">Susah</string>
    <string name="hard_mode_explanation">Anda bermain dalam mode sulit, jadi Anda hanya mendapat setengah skor yang Anda minta! Bukankah permainan ini sulit?</string>
    <string name="hide_bottom_view_on_scroll_behavior">com.google.android.material.behavior.HideBottomViewOnScrollBehavior</string>
    <string name="icon_content_description">Dialog Icon</string>
    <string name="initial_input">0000</string>
</resources>