<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    android:theme="@style/AppIntroStyle"
    android:id="@id/background"
    android:fitsSystemWindows="false"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <android.gesture.GestureOverlayView
        android:id="@id/pager_gesture_overlay"
        android:layout_width="0.0dip"
        android:layout_height="0.0dip"
        android:gestureColor="@android:color/transparent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <androidx.viewpager2.widget.ViewPager2
            android:id="@id/view_pager"
            android:fitsSystemWindows="false"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:overScrollMode="never" />
    </android.gesture.GestureOverlayView>
    <View
        android:id="@id/bottom"
        android:background="@color/appintro_bar_color"
        android:layout_width="0.0dip"
        android:layout_height="@dimen/appintro2_bottombar_height"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
    <ImageButton
        android:id="@id/skip"
        android:contentDescription="@string/app_intro_skip_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/bottom"
        app:srcCompat="@drawable/ic_appintro_fab_skip"
        style="@style/AppIntro2ButtonStyleCompat" />
    <ImageButton
        android:id="@id/back"
        android:visibility="gone"
        android:contentDescription="@string/app_intro_back_button"
        android:rotation="180.0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/ic_appintro_fab_next"
        style="@style/AppIntro2ButtonStyleCompat" />
    <FrameLayout
        android:id="@id/indicator_container"
        android:layoutDirection="ltr"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/bottom"
        style="@style/AppIntroIndicatorContainer" />
    <ImageButton
        android:id="@id/next"
        android:contentDescription="@string/app_intro_next_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/bottom"
        app:srcCompat="@drawable/ic_appintro_fab_next"
        style="@style/AppIntro2ButtonStyleCompat" />
    <ImageButton
        android:id="@id/done"
        android:visibility="gone"
        android:contentDescription="@string/app_intro_done_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/bottom"
        app:srcCompat="@drawable/ic_appintro_fab_done"
        style="@style/AppIntro2ButtonStyleCompat" />
</androidx.constraintlayout.widget.ConstraintLayout>