<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:gravity="center"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout
        android:gravity="center"
        android:orientation="vertical"
        android:background="@drawable/bg_circular_gradient"
        android:padding="20.0dip"
        android:paddingBottom="50.0dip"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">
        <ImageView
            android:id="@id/customactivityoncrash_error_activity_image"
            android:layout_width="150.0dip"
            android:layout_height="wrap_content"
            android:src="@drawable/error"
            android:scaleType="fitXY"
            android:adjustViewBounds="true"
            android:layout_centerHorizontal="true"
            android:contentDescription="@null" />
        <TextView
            android:textAppearance="@style/TextAppearance.FontPath.Bold"
            android:textSize="30.0dip"
            android:textColor="@android:color/white"
            android:id="@id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10.0dip"
            android:text="Ooops!"
            android:layout_below="@id/customactivityoncrash_error_activity_image"
            android:layout_alignLeft="@id/textView"
            android:layout_alignStart="@id/textView" />
        <TextView
            android:textAppearance="@style/TextAppearance.FontPath.Regular"
            android:textColor="@android:color/white"
            android:id="@id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10.0dip"
            android:text="@string/customactivityoncrash_error_activity_error_title"
            android:layout_below="@id/textView1"
            android:layout_alignLeft="@id/textView"
            android:layout_alignStart="@id/textView" />
        <TextView
            android:textAppearance="@style/TextAppearance.FontPath.Regular"
            android:textColor="@android:color/white"
            android:id="@id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginTop="24.0dip"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:text="@string/customactivityoncrash_error_activity_error_occurred_explanation"
            android:layout_below="@id/textView2"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />
        <Button
            android:textAppearance="@style/TextAppearance.FontPath.Bold"
            android:textStyle="bold"
            android:textColor="@android:color/white"
            android:id="@id/customactivityoncrash_error_activity_restart_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/customactivityoncrash_error_activity_close_app"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            style="@style/Widget.AppCompat.Button.Borderless" />
        <Button
            android:textAppearance="@style/TextAppearance.FontPath.Bold"
            android:textColor="#ff767676"
            android:gravity="center"
            android:id="@id/customactivityoncrash_error_activity_clear_cache_button"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8.0dip"
            android:text="CLEAR CACHE"
            android:layout_above="@id/customactivityoncrash_error_activity_more_info_button"
            android:layout_alignParentRight="true"
            style="@style/Widget.AppCompat.Button.Borderless" />
        <Button
            android:textAppearance="@style/TextAppearance.FontPath.Bold"
            android:textColor="@android:color/white"
            android:gravity="center"
            android:id="@id/customactivityoncrash_error_activity_more_info_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/customactivityoncrash_error_activity_error_report"
            android:layout_alignParentLeft="true"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            style="@style/Widget.AppCompat.Button.Borderless" />
    </RelativeLayout>
</RelativeLayout>